--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<body class="scrollbar" id="style-8">
+<body class="scrollbar">
 
 
   <div id="vueapp">
@@ -53,7 +53,7 @@
             </div>
           </div>
         </template>
-      -->
+        -->
 
         <!-- Select Pool -->
         <div id="selectDiv" class="form-group">
@@ -83,9 +83,40 @@
 
         <!-- Mining Button IF's -->
         <div class="form-group">
-          <button v-if="showButton" v-on:click="startMiner(Algos)" type="button" class="btn btn-primary btn-block">Start Mining</button>
-          <button v-if="!startM" v-on:click="startMiner(__dirname + '\\scripts\\stop.bat')" type="button" class="btn btn-primary btn-block">Stop & Close all Mining Windows</button>
+          <button v-if="showButton" v-on:click="switchAndStartMiner(Algos)" type="button" class="btn btn-primary btn-block">Start Mining</button>
+          <button v-if="!startM" v-on:click="switchAndStartMiner(__dirname.substring(0, __dirname.length - 9) + '\\stop.bat')" type="button" class="btn btn-primary btn-block">Stop & Close all Mining Windows</button>
+          <button v-if="!startM" v-on:click="executeCommand(__dirname.substring(0, __dirname.length - 9) + '\\restart.bat')" type="button" class="btn btn-primary btn-block">Restart Current Miner (incase of an error)</button>
         </div>
+
+
+        <!-- Reset Benchmark & Profits -->
+        <div class="row">
+          <div class="reset-buttons col col-md-6">
+            <button v-on:click="executeCommand(__dirname.substring(0, __dirname.length - 9) + '\\resetbenchmark.bat')" class="btn btn-success btn-block">
+              Reset Benchmark Statistics
+            </button>
+          </div>
+          <div class="reset-buttons col col-md-6">
+            <button v-on:click="executeCommand(__dirname.substring(0, __dirname.length - 9) + '\\resetprofit.bat')" class="btn btn-success btn-block">
+              Reset Profit Statistics
+            </button>
+          </div>
+        </div>
+
+        <!-- Reset Benchmark & Profits
+        <div class="row">
+          <div class="form-group col col-md-6">
+            <button v-on:click="executeCommand(__dirname + '\\resetbenchmark.bat')" class="btn btn-success btn-block">
+              Reset Benchmark Statistics
+            </button>
+          </div>
+          <div class="form-group col col-md-6">
+            <button v-on:click="executeCommand(__dirname + '\\resetprofit.bat')" class="btn btn-success btn-block">
+              Reset Profit Statistics
+            </button>
+          </div>
+        </div>
+      -->
 
         <!-- Check Profits -->
         <!--
@@ -130,7 +161,7 @@
   <div class="row special">
     <div class="col-sm">
       <a v-if="inputs.gpunum.value > 0 && poolname != '' && checkedAlgos != ''" id="downloadClass" href="">
-        <button v-on:click="downloadBat('start.bat', 'text/plain')" type="button" class="btn btn-default btn-block">Download</button>
+        <button v-on:click="downloadFile('start.bat', 'text/plain')" type="button" class="btn btn-default btn-block">Download</button>
       </a>
     </div>
   </div>
